k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener
  namespace: url-shortener
  labels:
    app.kubernetes.io/part-of: url-shortener
spec:
  ingressClassName: nginx
  rules:
    - host: shortener.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-api
                port:
                  number: 80
